# rouge_clone

./: Cargo.toml  Readme.md
src/: app_constants.rs  main.rs
src/actors/: actors_plugin.rs  mod.rs
src/actors/components/: actor.rs  mod.rs  player.rs
src/actors/data/: actor_builder.rs  mod.rs
src/dev/: dev_plugin.rs  mod.rs
src/dev/systems/: dev_input.rs  dev_startup.rs  dev_update.rs  draw_colliders.rs  mod.rs
src/physics/: mod.rs  physics_plugin.rs
src/physics/components/: collider.rs  collider_settings.rs  drag_curve.rs  mod.rs  sensor.rs  velocity.rs
src/physics/data/: custom_curve.rs  interpolation.rs  mod.rs
src/physics/systems/: apply_drag.rs  apply_velocity.rs  mod.rs
